--- a/lesson1/Dockerfile
+++ b/lesson1/Dockerfile
@@ -1,5 +1,10 @@
-FROM python:3.6-alpine3.8
-COPY 1.py /app/
+FROM golang:1.10 AS builder
 WORKDIR /app
-ENTRYPOINT ["python3", "/app/1.py"]
+COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app .
 
+FROM alpine:latest
+WORKDIR /root/
+COPY --from=builder ./app .
+EXPOSE 8080
+CMD ["./app"]
