--- a/lesson1/kubernetes/deployment.yaml
+++ b/lesson1/kubernetes/deployment.yaml
@@ -1,11 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: declarative-deployment
+  name: goapp-deployment
+  namespace: lesson15
   labels:
-    app: go-web
+    app: goapp
 spec:
-  replicas: 1
+  replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   selector:
     matchLabels:
       app: goapp
@@ -15,7 +20,7 @@ spec:
         app: goapp
     spec:
       containers:
-      - name: goapp
+      - name: web
         image: alex501020/lesson1:v0.3
         ports:
         - containerPort: 8080
